# freelancehunt_automizer

./: .env.example  .gitignore  GUI_INSTRUCTIONS.md  QUICK_START.md  README.md  build_exe.py  docker-compose.yml  gui_app.py  main.py  pyproject.toml  requirements.txt  test.py
ai/: client.py  prompts.py
alembic/: env.py
alembic/versions/: 0fd44d330712_currency_added.py  60750ad6297a_init.py  98681ab6f076_marketplace_field_added_to_project.py  deda33dc935b_marketplace.py
auth/: __init__.py  authenticator.py  base.py  gui_login.py  login.py  selectors.py
auth/freelancehunt/: __init__.py  authenticator.py  login.py
auth/freelancer/: __init__.py  authenticator.py  login.py  selectors.py
config/: settings.py
core/: browser.py  config.py  container.py  exceptions.py  logger_config.py  loggers.py
db/: __init__.py  requests.py
db/models/: project.py
db/repositories/: __init__.py  base.py  project_repository.py
drivers/: browser.py
gui/: main_window.py
schemas/: project.py
scraper/: __init__.py  base.py  factory.py  projects.py  selectors.py  test.py
scraper/freelancehunt/: __init__.py  projects.py
scraper/freelancer/: __init__.py  projects.py  selectors.py
scripts/: build.bat  build.ps1  db.py  run_gui.bat  run_gui.ps1
services/: __init__.py  project_service.py
tests/: test_gui.py
utils/: helpers.py
